--- a/pages/testwasm/div4update.html
+++ b/pages/testwasm/div4update.html
@@ -15,8 +15,8 @@
     </h1>
 
     <h3>
-        <div class="cdiv" id="4.0.1">(maclane) try to add wasm here</div>
-        <div class="cdiv" id="4.0.2">(maclane) length of string here</div>
+        <div class="cdiv" id="4.0.1">(source: github.com/schley/testwasm) try to add wasm here</div>
+        <div class="cdiv" id="4.0.2">(source: github.com/schley/testwasm) length of string here</div>
         <button onclick="updatediv4()">Toggle it</button>
     </h3>
     <!-- <footer class="footer"><a href="https://schley.tech/">homepage refresh</a></footer> -->
